[package]
name = "ibc-middleware-core"
description = "IBC middleware core crate"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ibc-core-router.workspace = true
ibc-core-router-types.workspace = true
ibc-core-host-types.workspace = true

[dev-dependencies]
ibc-primitives.workspace = true
ibc-core-channel-types.workspace = true
