[package]
name = "ibc-middleware-module-macros"
version = "0.1.0"
description = "IBC module to facilitate middleware implementations - macros"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
