[package]
name = "ibc-middleware-packet-forward"
description = "IBC packet forward middleware implementation targeting ibc-rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dur.workspace = true
either.workspace = true
ibc-app-transfer-types.workspace = true
ibc-core-channel-types.workspace = true
ibc-core-channel.workspace = true
ibc-core-host-types.workspace = true
ibc-core-router-types.workspace = true
ibc-core-router.workspace = true
ibc-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
